--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -53,6 +54,7 @@
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "redux-mock-store": "^1.5.4",
+    "reinspect": "^1.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0"
